gitops/espresso/apps/echo-server/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: echo-server
  namespace: echo-server
spec:
  addresses:
    - type: IPAddress
      value: 10.0.188.156
    - type: IPAddress
      value: fd7a:115c:a1e0:188::156
  gatewayClassName: cilium
  infrastructure:
    labels:
      advertise-via-bgp: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
